[tool.poetry]
name = "civic_agentcy"
version = "0.1.0"
description = "civic_agentcy using crewAI"
authors = ["Ali Madad <ali@scty.org>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.22.2"}

[tool.poetry.scripts]
civic_agentcy = "civic_agentcy.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"